--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "stackblitz-starters-6gszsu",
+  "name": "gqaiwrzxq.github",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular/animations": "16.2.8",
+    "@angular/cdk": "16.2.7",
+    "@angular/common": "16.2.8",
+    "@angular/compiler": "16.2.8",
+    "@angular/core": "16.2.8",
+    "@angular/flex-layout": "15.0.0-beta.42",
+    "@angular/forms": "16.2.8",
+    "@angular/material": "^16.2.7",
+    "@angular/platform-browser": "16.2.8",
+    "@angular/platform-browser-dynamic": "16.2.8",
+    "@angular/router": "16.2.8",
+    "@types/jasmine": "4.0.3",
+    "@types/node": "12.20.55",
+    "apexcharts": "^3.43.0",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
-    "zone.js": "0.13.3",
-    "@angular/core": "16.2.8",
-    "@angular/forms": "16.2.8",
-    "@types/jasmine": "4.0.3",
-    "@angular/common": "16.2.8",
-    "@angular/router": "16.2.8",
-    "@angular/compiler": "16.2.8",
-    "@angular/animations": "16.2.8",
-    "@angular/platform-browser": "16.2.8",
-    "@angular/platform-browser-dynamic": "16.2.8"
+    "zone.js": "0.13.3"
   },
   "scripts": {
     "ng": "ng",
