--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@angular/core": "16.2.8",
     "@angular/flex-layout": "15.0.0-beta.42",
     "@angular/forms": "16.2.8",
-    "@angular/material": "^16.2.7",
+    "@angular/material": "16.2.7",
     "@angular/platform-browser": "16.2.8",
     "@angular/platform-browser-dynamic": "16.2.8",
     "@angular/router": "16.2.8",
+    "@popperjs/core": "^2.11.8",
     "@types/jasmine": "4.0.3",
     "@types/node": "12.20.55",
-    "apexcharts": "^3.43.0",
-    "ng-apexcharts": "^1.8.0",
+    "apexcharts": "3.43.0",
+    "app": "^0.1.0",
+    "bootstrap": "^5.3.2",
+    "ng-apexcharts": "1.8.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
     "zone.js": "0.13.3"
